welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: ';' expected but ')' found.
while(false)estFaceMur()){
                        ^